feat(firearms): item models: composite weapon layers per slot, attachment and cartridge sprites, our own pixel art (FA-9)
Wires the 26.2 minecraft:select/minecraft:condition item-model schema onto FA-3's existing
firearms:base and firearms:attachment_<slot> components with zero mixin (ARCH-DEC-006):
items/weapon.json selects the six bases on firearms:base's full value, each a minecraft:composite
of a using-item-conditioned base layer plus one has_component-gated slot layer per class slot;
items/attachment_<slot>.json and items/cartridge_<caliber>.json wire the standalone items. Every
sprite is hand-pixelled by tools/sprites.py (deterministic, committed PNGs): six 32x16 base
silhouettes, 22 attachment glyphs (a 16x16 icon plus a 32x16 weapon-layer overlay reused across
every base rather than baked per weapon), and six 16x16 cartridges -- our own designs, nothing
copied from any game.

ModelAssetsTest checks every item definition's model reference, every model's texture reference,
every base's exact per-class slot set, and every attachment's sprite/model/wiring against the files
themselves; SourceSurfaceTest's PUBG/branding scan now reads resource files as raw bytes through
ISO-8859-1 instead of strict UTF-8 so it can cover the new binary PNGs without throwing.

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01JjM78G6VPsYebwHsApQ6Q9